--- a/src/app/student/pages/student-list/student-list.component.html
+++ b/src/app/student/pages/student-list/student-list.component.html
@@ -8,8 +8,8 @@
     <label for="">Фильтр:</label>
     <select name="" id="" [(ngModel)]="sortSelected">
       <option value="surname">Фамилия</option>
-      <option value="group">Группа</option>
-      <option value="direction">По направление</option>
+      <option value="group">Учебная группа</option>
+      <option value="direction">Направление обучения</option>
     </select>
     <input type="text" [(ngModel)]="sortingInput">
     <table class="table table-bordered">
